[project]
name = "icu-los"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyterlab>=4.4.3",
    "miceforest>=6.0.3",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tinydb>=4.8.2",
    "torch>=2.6.0",
    "voyageai>=0.3.2",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.27.0",
]

[tool.basedpyright]
typeCheckingMode = "standard"
